// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenu component should match snapshot 1`] = `
.c0 {
  padding-top: 20px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-y: auto;
}

.c0::-webkit-scrollbar {
  width: 5px;
}

.c2.c2.c2.c2.c2 {
  cursor: default;
  color: #e2cbf3;
  padding: 0 30px;
  line-height: 18px;
  margin: 15px 0;
}

.c1 {
  border-top: 1px solid rgba(162,128,199,0.4);
  margin: 0 30px 5px 30px;
}

<div
  className="c0"
>
  <div
    className="item"
    data-test-id="navigation-/tasks"
    onClick={[Function]}
  >
    <a
      aria-current={false}
      href="/tasks"
      onClick={[Function]}
    >
      Tasks dashboard
    </a>
  </div>
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="item c2"
    onClick={[Function]}
  >
    Build ID: 
    local
  </div>
</div>
`;

exports[`NavMenu component should match snapshot when menu has sub-menus 1`] = `
.c1.c1.c1.c1.c1 {
  margin-top: 22px;
  margin-bottom: 30px;
  padding-left: 0;
  width: 100%;
  min-height: 17px;
  border: none;
  box-shadow: none;
}

.c1.c1.c1.c1.c1 .title {
  font-size: 12px;
  line-height: 17px;
  color: #e2cbf3;
  text-transform: uppercase;
  padding: 0 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1.c1.c1.c1.c1 .title.active .chevron.down.icon {
  margin-top: -1px;
  margin-left: 2px;
}

.c1.c1.c1.c1.c1 .title .chevron.down.icon {
  position: absolute;
  left: 198px;
  margin: 0;
  margin-top: 2px;
  color: #e2cbf3;
  font-size: 10px;
}

.c1.c1.c1.c1.c1 .content .item {
  padding: 0;
}

.c1.c1.c1.c1.c1 .content .item a {
  display: block;
  padding-left: 38px;
}

.c1.c1.c1.c1.c1 > .item {
  padding: 0;
}

.c0 {
  padding-top: 20px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-y: auto;
}

.c0::-webkit-scrollbar {
  width: 5px;
}

.c3.c3.c3.c3.c3 {
  cursor: default;
  color: #e2cbf3;
  padding: 0 30px;
  line-height: 18px;
  margin: 15px 0;
}

.c2 {
  border-top: 1px solid rgba(162,128,199,0.4);
  margin: 0 30px 5px 30px;
}

<div
  className="c0"
>
  <div
    className="item"
    data-test-id="navigation-/tasks"
    onClick={[Function]}
  >
    <a
      aria-current={false}
      href="/tasks"
      onClick={[Function]}
    >
      Tasks dashboard
    </a>
  </div>
  <div
    className="ui vertical accordion ui c1 menu"
    open={false}
  >
    <div
      className="item"
      onClick={[Function]}
    >
      <div
        className="title"
        data-test-id="navigation-Liquidity"
        onClick={[Function]}
      >
        <span>
          Liquidity
        </span>
        <i
          aria-hidden="true"
          className="chevron down icon"
        />
      </div>
      <div
        className="content"
      >
        <div
          className="item"
          data-test-id="navigation-/deposits"
          onClick={[Function]}
        >
          <a
            aria-current={false}
            href="/deposits"
            onClick={[Function]}
          >
            Deposits
          </a>
        </div>
        <div
          className="item"
          data-test-id="navigation-/loans"
          onClick={[Function]}
        >
          <a
            aria-current={false}
            href="/loans"
            onClick={[Function]}
          >
            Loans
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  />
  <div
    className="c2"
  />
  <div
    className="item c3"
    onClick={[Function]}
  >
    Build ID: 
    local
  </div>
</div>
`;
